# pii-masker

./: Cargo.toml  Dockerfile  README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs  masker.rs  rust.rs
crates/inspect/: Cargo.toml
crates/inspect/src/: lib.rs
crates/pii/: Cargo.toml
crates/pii/src/: lib.rs  similarity.rs
crates/pii_masker_derive/: Cargo.toml
crates/pii_masker_derive/src/: lib.rs
crates/ri/: Cargo.toml
crates/ri/src/: lib.rs
example/: student.rs  student.yaml
