[package]
name = "pii-masker-pii"
version = "0.1.0"
edition = "2021"
authors = ["Gianluca Brigandi <gbrigand@gmail.com>"]
description = "A tool to mask PII in source code using AST-based grepping and fake data generation."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
regex = "1"
fake = { version = "2.9.2", features = ["derive"] }
fakeit = "1.2.0"
rand = "0.8.5"
strsim = "0.11.1"
ordered-float = "4.2.0"
clap = "4.5.4"

[dev-dependencies]

[features]
default = []

[lib]
path = "src/lib.rs"

